add demonstration video.

--- a/sol_ol_map_draw/static/description/index.html
+++ b/sol_ol_map_draw/static/description/index.html
@@ -3,18 +3,22 @@
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:#875A7B;">Base Module for Geocoding, Drawing Features and Generics Entities Location</h2>
         <h3 class="oe_slogan">no need for key or any external dependencies</h3>
-        <div class="oe_demo oe_picture oe_screenshot">
-            <h3 class="oe_slogan">Demonstration</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/XtknhhBVSpE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="oe_centeralign oe_websiteonly">
+            <a href="https://www.youtube.com/embed/XtknhhBVSpE"
+               target="_blank" title="Demonstration"
+               class="oe_button oe_big oe_tacky btn_watch">Watch the video
+            </a>
         </div>
     </div>
 
 </section>
 
 <section class="oe_container">
-     <div class="oe_row oe_spaced">
-            <a href="https://github.com/0-Solver-0/odoo-ext-files/">
+    <div class="oe_centeralign oe_websiteonly">
+            <a href="https://github.com/0-Solver-0/odoo-ext-files/"
+               target="_blank" title="overlay template"
+               class="oe_button oe_big oe_tacky btn_watch">
                 download sol.map.manage.overlay.xls
             </a>
-     </div>
+    </div>
 </section>
