--- a/sol_ol_map_draw/static/description/index.html
+++ b/sol_ol_map_draw/static/description/index.html
@@ -9,16 +9,12 @@
                class="oe_button oe_big oe_tacky btn_watch">Watch the video
             </a>
         </div>
-    </div>
-
-</section>
-
-<section class="oe_container">
-    <div class="oe_centeralign oe_websiteonly">
+        <div class="oe_centeralign oe_websiteonly">
             <a href="https://github.com/0-Solver-0/odoo-ext-files/"
-               target="_blank" title="overlay template"
-               class="oe_button oe_big oe_tacky btn_watch">
-                download sol.map.manage.overlay.xls
+               target="_blank" title="Overlay template"
+               class="oe_button oe_big oe_tacky btn_watch">download Overlay Tempplate
             </a>
+        </div>
     </div>
+
 </section>
