--- a/sol_ol_map_draw/static/description/index.html
+++ b/sol_ol_map_draw/static/description/index.html
@@ -4,15 +4,16 @@
         <h2 class="oe_slogan" style="color:#875A7B;">Base Module for Geocoding, Drawing Features and Generics Entities Location</h2>
         <h3 class="oe_slogan">no need for key or any external dependencies</h3>
         <div class="oe_centeralign oe_websiteonly">
-            <a href="https://www.youtube.com/embed/XtknhhBVSpE"
+            <a href="https://youtu.be/XtknhhBVSpE"
                target="_blank" title="Demonstration"
                class="oe_button oe_big oe_tacky btn_watch">Watch the video
             </a>
         </div>
+        <br/>
         <div class="oe_centeralign oe_websiteonly">
             <a href="https://github.com/0-Solver-0/odoo-ext-files/"
                target="_blank" title="Overlay template"
-               class="oe_button oe_big oe_tacky btn_watch">download Overlay Tempplate
+               class="oe_button oe_big oe_tacky">download Overlay template
             </a>
         </div>
     </div>
