--- a/sol_ol_map_draw/static/description/index.html
+++ b/sol_ol_map_draw/static/description/index.html
@@ -6,10 +6,12 @@
         <div class="oe_centeralign">
             <a href="https://youtu.be/XtknhhBVSpE" target="_blank" title="Demonstration" class="oe_button">Watch the video</a>
         </div>
-        <br/>
+    </div>
+</section>
+<section class="oe_container">
+    <div class="oe_row oe_spaced">
         <div class="oe_centeralign">
-            <a href="https://github.com/0-Solver-0/odoo-ext-files/" target="_blank" title="Overlay template" class="oe_button">download Overlay template</a>
+            <a href="https://github.com/0-Solver-0/odoo-ext-files" target="_blank" title="Overlay template" class="oe_button">download Overlay template</a>
         </div>
     </div>
-
 </section>
