--- a/sol_ol_map_draw/static/description/index.html
+++ b/sol_ol_map_draw/static/description/index.html
@@ -10,8 +10,7 @@
 </section>
 <section class="oe_container">
     <div class="oe_row oe_spaced">
-        <div class="oe_centeralign">
-            <a href="https://github.com/0-Solver-0/odoo-ext-files" target="_blank" title="Overlay template" class="oe_button">download Overlay template</a>
-        </div>
+        <h2 class="oe_slogan" style="color:#875A7B;">Download Overlay template from  github at : https://github.com/0-Solver-0/odoo-ext-files</h2>
+        <h3 class="oe_slogan"><a href="https://github.com/0-Solver-0/odoo-ext-files" target="_blank" title="Overlay template" class="oe_button">download Overlay template</a></h3>
     </div>
 </section>
