--- a/sol_ol_map_draw/static/description/index.html
+++ b/sol_ol_map_draw/static/description/index.html
@@ -10,7 +10,9 @@
 </section>
 <section class="oe_container">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Download Overlay template from  github at</h2>
-        <h3 class="oe_button">https://github.com/0-Solver-0/odoo-ext-files</h3>
+        <div class="oe_centeralign">
+            <h2 class="oe_slogan" style="color:#875A7B;">Download Overlay template from  github at</h2>
+            <h3 class="oe_slogan">https://github.com/0-Solver-0/odoo-ext-files</h3>
+        </div>
     </div>
 </section>
