--- a/sol_product_service_hierarchy/static/description/index.html
+++ b/sol_product_service_hierarchy/static/description/index.html
@@ -1,64 +1,35 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Merge Customer Invoice/Vendor Bill.</h2>
-        <h4 class="oe_slogan">This module Merge Draft Customer Invoice/Vendor Bill Of Same Partner.</h4>
+        <h2 class="oe_slogan" style="color:#875A7B;">Service Hierarchy.</h2>
+        <h4 class="oe_slogan">This module allow user to create a hierarchy of service</h4>
     </div>
 </section>
 <section class="oe_container">
-    <h4 class="oe_slogan" style="color:#428bca">Merge Account Invoice</h4>
+    <h4 class="oe_slogan" style="color:#428bca">Service Hierarchy.</h4>
     <div class="oe_row oe_spaced" style="background: #eeeeee;">
         <div class="col-md-12">
-	    <center>
-		<b>FEATURES<b/>
-                <h3>Merge Draft Customer Invoice/Vendor Bill.</h3>
-		<h3>Selected Invoice Must be Related to Same Partner</h3>
-		<h3>While Merge Invoice Partner,Company,Salesperson and Journal Should be Same</h3>
-           </center>
-	</div>
-    </div>
-</section>
-<br/>
-<section class="oe_container oe_dark">
-    <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Select More than one Draft Invoice and go to Action and Click on Merge Invoice.</h2>
-    	<div class="col-md-12">
-            <img class="oe_picture oe_screenshot" src="Cust_Invoices_1.png"/>
-        </div>
-    </div>
-</section>
-<br/>
-<section class="oe_container oe_dark">
-    <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">while click on Merge Invoice open pop up window and click on Merge Invoice</h2>
-    	<div class="col-md-12">
-            <img class="oe_picture oe_screenshot" src="Cust_Invoices_2.png"/>
-        </div>
-    </div>
-</section>
-<br/>
-<section class="oe_container oe_dark">
-    <div class="oe_row oe_spaced">
-        <h2 class="oe_slogan" style="color:#875A7B;">Cancel Selected Invoice and Create New One Invoice.</h2>
-         <div class="col-md-12">
-            <img class="oe_picture oe_screenshot" src="Cust_Invoices_3.png"/>
-        </div>
+            <center>
+                <b>FEATURES<b/>
+                <h3>* Compose a service from several sub services.</h3>
+                <h3> * Sub service can be inserted automatically in sale order line : (Field include price)</h3>
+                <h3>* Sub service can be shared with all services : (Field Product shared).</h3>
+                <h3> * Sub service can add extra price to the composed service in sale order line : (Field include price).</h3>
+                <h3>* Sub service can be add extra space to service description in sale order line : (Field extra space).</h3>
+                <h3>Selected Invoice Must be Related to Same Partner</h3>
+                <h3>While Merge Invoice Partner,Company,Salesperson and Journal Should be Same</h3>
+            </center>
+	    </div>
     </div>
 </section>
 <br/>
 <section class="oe_container">
-   <div class="oe_row" style="background-color: #008000;"> 
-       <div style="margin-bottom:10px;" class="oe_slogan text-center">
-           
-       </div>
-   </div>
    <div class="oe_row" style="background-color: #004C00;"> 
-       <div style="margin-bottom:10px;" class="oe_slogan text-center">
+       <div class="oe_slogan text-center" style="margin-bottom:10px;">
            <div class="oe_span12">
            <center><h3 class="text-center" style="color:#FFFFF; font-size:20px">Contact us for Support, Query, Customization, Implementation</h3></center>
        </div>
            <span>
-               <center><b><a target=""  style="color: yellow !important;font-weight:bold;">Write us Mail: vrajatechnologies@gmail.com</a></b><br/><br/>
-               <a target=""  style="color: yellow !important;font-weight:bold;">Send Request On Skype : live:vrajatechnologies</a></center>
+               <center><b><a style="color: yellow !important;font-weight:bold;"  target="">Write us Mail: mestadi.walid@gmail.com</a></b><br/><br/>
            </span>
        </div>
    </div>
